2011-11-23  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [CMake] Move the top-level logic to the top-level directory.
        https://bugs.webkit.org/show_bug.cgi?id=72685

        Reviewed by Brent Fulgham.

        * CMakeLists.txt: Point to the right Source/ directory.
        * wtf/CMakeLists.txt: Ditto.

2011-11-22  Yuqiang Xian  <yuqiang.xian@intel.com>

        Strength reduction for Mul and Mod operations for known constants in DFG
        https://bugs.webkit.org/show_bug.cgi?id=72878

        Reviewed by Filip Pizlo.

        Also the code should be commonly shared by both 32_64 and 64.

        * dfg/DFGNode.h:
        (JSC::DFG::nodeMayOverflow):
        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::fmodAsDFGOperation):
        (JSC::DFG::SpeculativeJIT::compileInstanceOf):
        (JSC::DFG::isPowerOfTwo):
        (JSC::DFG::logTwo):
        (JSC::DFG::SpeculativeJIT::compileSoftModulo):
        (JSC::DFG::SpeculativeJIT::compileArithMul):
        (JSC::DFG::SpeculativeJIT::compileArithMod):
        * dfg/DFGSpeculativeJIT.h:
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):
        * dfg/DFGSpeculativeJIT64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):

2011-11-22  Daniel Bates  <dbates@rim.com>

        Add WTF infrastructure for the BlackBerry port
        https://bugs.webkit.org/show_bug.cgi?id=72970

        Reviewed by Antonio Gomes.

        * wtf/Assertions.cpp: Added BlackBerry-specific logging directive.
        * wtf/MathExtras.h:
        (abs): Added; stdlib doesn't contain abs() on QNX.
        * wtf/Platform.h: Define WTF_PLATFORM_BLACKBERRY and enable some platform features.
        * wtf/RandomNumberSeed.h:
        (WTF::initializeRandomNumberGenerator): For the BlackBerry port, we initialize
        the bad pseudo random number generator using time(3) before initializing the
        Mersenne Twister random number generator.
        * wtf/ThreadingPthreads.cpp: